--- a/.github/workflows/cobra.yml
+++ b/.github/workflows/cobra.yml
@@ -1,8 +1,8 @@
 name: Generate Datas
 
 on:
-  schedule:
-    - cron: "* */10 * * *"
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
   workflow_dispatch:
 
 jobs:
@@ -10,7 +10,7 @@ jobs:
     name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
-    
+      # Snake Animation
       - uses: Platane/snk@master
         id: snake-gif
         with:
